# rag-context-evaluator

./: .gitignore  Makefile  README.md  pyproject.toml
evaluation_dataset/: wiki_qa_train.parquet
evaluation_dataset/results/: context_relevance_guard_results.csv  context_usefulness_guard_results.csv
tests/: test_validator.py
validator/: __init__.py  benchmark_context_relevance.py  benchmark_llm_rag_context.py  enums.py  main.py  models.py  post-install.py  prompt_hub.py
validator/prompts/: prompt_hub.py  prompts.py
