[project]
name = "rag-context-evaluator"
version = "0.0.1"
description = "ML3 RAG Context Evaluator"
authors = [
    {name = "MLcube", email = "info@mlcube.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "guardrails-ai>=0.5.15",
    "langchain-google-genai>=2.1.10",
    "langchain[openai]>=0.3.27",
]


[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "polars>=1.33.0",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
    "scikit-learn>=1.7.1",
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rP"
testpaths = [
    "tests"
]

[tool.pyright]
include = ["validator"]
